added error popup

--- a/history.txt
+++ b/history.txt
@@ -72,3 +72,8 @@ lol xd
 [17:33] - pool-a05_157: moin
 [17:33] - pool-a05_728: ja moin moin
 [17:33] - pool-a05_728: ja lo xd
+[22:56] - pool-a05_106: moin moin
+[22:56] - pool-a05_106: +
+[22:56] - pool-a05_106: hallo
+[22:57] - pool-a05_106: shift
+[22:58] - pool-a05_976: mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
